@@ -15,23 +15,11 @@ import net.minecraft.util.EnumChatFormatting;
 
 import java.awt.*;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
-public class WalkBaritone extends Baritone {
-//Custom grid example
+public class AutoMineBaritone extends Baritone{
 
-    //Xxxxxxxxxxxxxx |
-    //xxxxxxxxxxxxxx |
-    //xxxxxxKxxxxxxx | MaxZ
-    //xxxxxxxxxxxxxx |
-    //xxxxxxxxxxxxxx |
-    //<------------->
-    //     MaxX
-    // Y is the same as world coordinate
-
-    // program coverts world coordinates to custom grid first
-    // custom grid starts takes X as [0, y, 0]
-    // player starts on K initially [maxX/2, y, maxZ/2]
     GridEnvironment<Node> gridEnvironment = new GridEnvironment<>();
 
     int maxX = 10000;
@@ -40,52 +28,52 @@ public class WalkBaritone extends Baritone {
 
     List<Node> checkedNodes = new ArrayList<>();
     List<Node> openNodes = new ArrayList<>();
-    List<BlockPos> blocksToWalk = new ArrayList<>();
+    LinkedList<BlockPos> blocksToMine = new LinkedList<>();
     int step = 0;
 
-    boolean walking;
+    boolean walking = false;
 
     Rotation rotation = new Rotation();
     int deltaJumpTick = 0;
+    BlockPos lastBlockPos;
 
 
 
     public void clearBlocksToWalk(){
         openNodes.clear();
         checkedNodes.clear();
-        blocksToWalk.clear();
+        blocksToMine.clear();
         gridEnvironment.clear();
         BlockRenderer.renderMap.clear();
         step = 0;
     }
 
 
-
     @Override
     protected void onEnable(BlockPos destinationBlock) {
-
-
         clearBlocksToWalk();
         new Thread(() -> {
+
+            mc.thePlayer.addChatMessage(new ChatComponentText("Starting automine"));
             BlockRenderer.renderMap.put(destinationBlock, Color.RED);
             try {
-                blocksToWalk = calculatePath(new BlockPos(mc.thePlayer.posX, mc.thePlayer.posY, mc.thePlayer.posZ), destinationBlock);
+                blocksToMine = calculateBlocksToMine(new BlockPos(mc.thePlayer.posX, mc.thePlayer.posY, mc.thePlayer.posZ), destinationBlock);
             }catch (Exception e){
                 mc.thePlayer.addChatMessage(new ChatComponentText(EnumChatFormatting.RED + "Can't find path" ));
                 e.printStackTrace();
                 return;
             }
-            for(BlockPos blockPos : blocksToWalk){
+            for(BlockPos blockPos : blocksToMine){
                 BlockRenderer.renderMap.put(blockPos, Color.ORANGE);
             }
             walking = true;
         }).start();
     }
 
-
     @Override
     public void onDisable() {
         walking = false;
+        KeybindHandler.resetKeybindState();
         clearBlocksToWalk();
     }
 
@@ -93,16 +81,17 @@ public class WalkBaritone extends Baritone {
     public void onTickEvent(){
 
         if(walking) {
-            if (!rotation.completed) {
-                KeybindHandler.resetKeybindState();
-                return;
-            }
-          //  KeybindHandler.setKeyBindState(KeybindHandler.keyBindShift, blocksToWalk.size() <= 5 || !BlockUtils.isAStraightLine(blocksToWalk.get(blocksToWalk.size() - 1), blocksToWalk.get(blocksToWalk.size() - 3), blocksToWalk.get(blocksToWalk.size() - 5)));
-            if (Math.floor(mc.thePlayer.posX) == blocksToWalk.get(blocksToWalk.size() - 1).getX() && Math.floor(mc.thePlayer.posY) == blocksToWalk.get(blocksToWalk.size() - 1).getY() && Math.floor(mc.thePlayer.posZ) == blocksToWalk.get(blocksToWalk.size() - 1).getZ()) {
-                blocksToWalk.remove(blocksToWalk.size() - 1);
+
+            KeybindHandler.setKeyBindState(KeybindHandler.keybindAttack, true);
+            KeybindHandler.setKeyBindState(KeybindHandler.keybindW, true);
+
+            if (BlockUtils.isPassable(blocksToMine.getLast())) {
+                lastBlockPos = blocksToMine.getLast();
+                BlockRenderer.renderMap.remove(blocksToMine.getLast());
+                blocksToMine.removeLast();
             }
 
-            if (blocksToWalk.size() == 0) {
+            if (blocksToMine.isEmpty()) {
                 mc.thePlayer.addChatMessage(new ChatComponentText("Finished baritone"));
                 walking = false;
                 KeybindHandler.resetKeybindState();
@@ -110,21 +99,29 @@ public class WalkBaritone extends Baritone {
                 return;
             }
 
-            if (AngleUtils.getRelativeYawFromBlockPos(blocksToWalk.get(blocksToWalk.size() - 1)) != -1) {
-                rotation.lockAngle((int) (AngleUtils.getClosest() + AngleUtils.getRelativeYawFromBlockPos(blocksToWalk.get(blocksToWalk.size() - 1))), 0);
-                if (blocksToWalk.get(blocksToWalk.size() - 1).getY() != (int) mc.thePlayer.posY) {
-                    if (rotation.completed) {
-                        deltaJumpTick = 3;
-                    }
-                }
+
+            if(!BlockUtils.isPassable(blocksToMine.getLast()))
+                 rotation.intLockAngle(AngleUtils.getRequiredYaw(blocksToMine.getLast()), AngleUtils.getRequiredPitch(blocksToMine.getLast()), 200);
+
+            if (lastBlockPos != null
+                    && lastBlockPos.getY() == (int) mc.thePlayer.posY + 1
+                    && (lastBlockPos.getX() != Math.floor(mc.thePlayer.posX) || lastBlockPos.getZ() != Math.floor(mc.thePlayer.posZ))
+                    && (BlockUtils.fitsPlayer(lastBlockPos.down()) || BlockUtils.fitsPlayer(lastBlockPos.down(2)))
+            ) {
+                deltaJumpTick = 3;
             }
+
+
+
             if (deltaJumpTick > 0) {
                 deltaJumpTick--;
                 KeybindHandler.setKeyBindState(KeybindHandler.keyBindJump, true);
             } else KeybindHandler.setKeyBindState(KeybindHandler.keyBindJump, false);
 
 
-            KeybindHandler.setKeyBindState(KeybindHandler.keybindW, rotation.completed);
+            System.out.println( !AngleUtils.onTheSameXZ(new BlockPos(mc.thePlayer.posX, mc.thePlayer.posY, mc.thePlayer.posZ), blocksToMine.get(blocksToMine.size() - 1)));
+
+
         }
 
     }
@@ -134,7 +131,7 @@ public class WalkBaritone extends Baritone {
             rotation.update();
     }
 
-    private List<BlockPos> calculatePath(BlockPos startingPos, BlockPos endingBlock) throws Exception {
+    private LinkedList<BlockPos> calculateBlocksToMine(BlockPos startingPos, BlockPos endingBlock) throws Exception {
 
         boolean completedPathfind = false;
         Node startNode;
@@ -239,19 +236,13 @@ public class WalkBaritone extends Baritone {
     private void openNodeAndCalculateCost(Node searchNode, Node currentNode, BlockPos endingBlockPos){
         if (!searchNode.checked
                 && !searchNode.opened
-                && BlockUtils.fitsPlayer(searchNode.blockPos.down())){
-
-            if (searchNode.blockPos.getY() != currentNode.blockPos.getY()){
-                if(!BlockUtils.isPassable(mc.theWorld.getBlockState(currentNode.blockPos.up(2)).getBlock())){
-                    return;
-                }
-            }
+                && !BlockUtils.isPassable(searchNode.blockPos) && !BlockUtils.isPassable(searchNode.blockPos.up())
+        && BlockUtils.canWalkOn(searchNode.blockPos.down()) ){
             searchNode.opened = true;
             searchNode.lastNode = currentNode;
             openNodes.add(searchNode);
             calculateCost(searchNode, endingBlockPos);
-            //    BlockRenderer.renderMap.put(searchNode.blockPos, Color.GREEN);
-
+            //BlockRenderer.renderMap.put(searchNode.blockPos, Color.GREEN);
         }
 
     }
@@ -279,16 +270,19 @@ public class WalkBaritone extends Baritone {
         node.fValue = node.gValue + node.hValue;
     }
 
-    private List<BlockPos> trackBackPath(Node goalNode, Node startNode){
-        List<BlockPos> blocksToWalk = new ArrayList<>();
+    private LinkedList<BlockPos> trackBackPath(Node goalNode, Node startNode){
+        LinkedList<BlockPos> blocksToWalk = new LinkedList<>();
         blocksToWalk.add(goalNode.blockPos);
         while(!startNode.equals(goalNode) && goalNode.lastNode != null){
             blocksToWalk.add(goalNode.lastNode.blockPos);
+            blocksToWalk.add(goalNode.lastNode.blockPos.up());
+            if(goalNode.lastNode.blockPos.getY() != goalNode.blockPos.getY()){
+                blocksToWalk.add(goalNode.lastNode.blockPos.up(2));
+            }
             goalNode = goalNode.lastNode;
         }
         mc.thePlayer.addChatMessage(new ChatComponentText("Block count : " + blocksToWalk.size()));
         return blocksToWalk;
     }
-
 
 }
